0.9.14.beta

- standard :preBuild task is now :configure
- added RakishProject#moduleConfigurationDir for the location of platform specific configuration cache.
- added GitModule for inclusion in projects for convenient git operations
- Configuration initializer now called in directory of declaring file.
- changed RakishProject#moduleName to projectName
- added FileSet#update with an optional :exclude option.
- added accessor for currentBuildConfig into CppProject
- thirdPartyPath now burried in hacky WindowsCpp module and retrieved from environment variable.

0.9.13.beta

- added second "args" arcument to all action lambdas for strict argument count checking
  in ruby 2.0+

0.9.12.beta

-   Added binary script to return path to auxilliary support files used in ant scripts and other places that are
    contained in this gem.

-   Added call-rake.xml ant script for use in spawning calls to rake from intellij managed, and general,
    ant scripts.

0.9.11.beta

-   Buyers remorse on createArgs it now uses only one named argument :$@
    This makes life a lot simpler and more future proof in case later versions of rake use
    additional named aruments

    examples:

    task :withCreateArgs, :$@=>{ :arg0=>'val0', :arg1=>val1 ...}  do   end
    task :withCreateArgs=>[ :deps ], :$@=>{ :arg0=>'val0', :arg1=>val1 ...}  do   end
    task :withCreateArgs,  [ :commandLineArg, ... ], :$@=>{ :arg0=>'val0', :arg1=>val1 ...}  do   end
    task :withCreateArgs,  [ :commandLineArg, ... ]=>[ :deps ], :$@=>{ :arg0=>'val0', :arg1=>val1 ...}  do   end

0.9.10.beta

-   definiteitely some bugfixes in the heat of getting projects to build.

-   Some cleanup on the CppProjects module

-   Added RaspberiPiCppTools for building C,C++ code on the Raspberi Pi.

-   Added rakish Rakish::SearchPath to facilitate finding executables in the current PATH or items in the classpath
    or other paths.

-   Added BuildConfig#findInPath to Rakish::ProjectConfig
