@@ -391,8 +391,8 @@ protected
             # to cover for windows command line length restriction write to file if too long.
             commandLength = cmdline.length;
             if(commandLength > 30000)
-                FileUtils.mkdir_p(moduleObjDir());
-                argFilePath = "#{moduleObjDir()}/javacArgs.txt";
+                FileUtils.mkdir_p(projectObjDir());
+                argFilePath = "#{projectObjDir()}/javacArgs.txt";
                 File.open(argFilePath,'w') do |fout|
                     fout.write(cmdline.slice(cmdFileOffset,commandLength - cmdFileOffset));
                 end
